# speech-insight-demo

./: .gitignore  README.md  main.py  pyproject.toml
